--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+  <style>
+    body {
+      background-color: lightgrey;
+    }
+  </style>
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" src="./main.css" />
+    <!-- <link rel="stylesheet" src="./main.css" /> -->
     <base href="/" />
     <title>React From Scratch</title>
   </head>
